--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
 {
   "name": "jdd-api",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "description": "",
+  "main": "./src/index.js",
   "scripts": {
-    "watch": "vue-cli-service build --watch --target lib --name index ./src/index.js",
-    "build": "vue-cli-service build --target lib --name index ./src/index.js",
-    "build-bundle": "vue-cli-service build --target lib --name index ./src/index.js",
-    "lint": "vue-cli-service lint"
+    "build-bundle": "webpack --mode=production",
+    "watch": "webpack --watch --progress"
   },
-  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/caleeli/jdd-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/caleeli/jdd-api/issues"
+  },
+  "homepage": "https://github.com/caleeli/jdd-api#readme",
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "babel-loader": "^8.2.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "webpack": "^5.26.1",
+    "webpack-cli": "^4.5.0"
+  }
 }
